styles.css
@import url('https://fonts.googleapis.com/css2?family=Jersey+25&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
html,body{
    height: 100%;
    margin: 0;
    padding: 0;
}

* {
    box-sizing: border-box;
}

body {
    background: rgb(255,255,255);
    background-size: 100%;
    margin: 0;
    height: 100%;
}

.info {
    text-align: center;
    color: black;
    margin: auto;
    font-family: "Poppins", sans-serif;
    font-size: x-large;
    
}

.button {
    display: flex;
    border: #B8BFC6;
    align-content: center;
    justify-content: center;
    gap: 10px;
    padding: 1rem;
}

button {
    padding: 1rem;
    gap: 1;
    opacity: .75;
    background-color: #FFF6E9;
    text-decoration: none;
    border: none;
    font-size: large;
    
}

button:hover {
    transition: all ease-in-out;
    opacity: 1;
}
nav {
    width: 100%;
    height: 15%;
    opacity: 80;
    display: flex;
    color: #D6DEE7;
    border-bottom: 1px solid #B8BFC6;
    align-items: center;
}

.NavSect {
    text-align: center;
    font-size: xx-large;
    color: black;
    margin: auto;
    align-self: center;

    font-family: "Playwrite NZ", cursive;
    padding-left: 1rem;

}

.NavSect:hover{
    opacity: .5;
}

